--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href='http://fonts.googleapis.com/css?family=Raleway:400' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Marvel:700' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	</head>
 	<body>
 		<div id="container">
@@ -76,9 +77,69 @@
 			</div>
 			<div id="bottom_bar">
 				Navigation
+				<div class="center"><button data-toggle="modal" data-target="#squarespaceModal" class="btn btn-primary center-block">Login / Sign up</button></div>
+
+
+<div class="modal fade" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+	<div class="modal-content">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+			<h3 class="modal-title" id="lineModalLabel">Sign In</h3>
+		</div>
+		<div class="modal-body">
+			<div class="container">
+				<div class="row">
+            <form>
+				<div class="col-xs-3">
+<div class="form-group" id="elementname"> 
+  <input id="name" name="name" type="text" placeholder="Name" class="form-control" ng-model="user.email" required>
+	<span ng-show="form.email.$dirty && form.email.$error.required"></span>
+</div>
+<div class="form-group" id="elementusername">
+  <input id="username" name="username" type="text" placeholder="Username" class="form-control " required>
+</div>
+<div class="form-group" id="elementpasswordt">
+    <input id="password" name="password" type="password" placeholder="Password" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,}$" class="form-control " title="Must contain 8 characters,minimum 1 alphabet 1 number and 1 special character" required>
+</div>
+<div class="form-group" id="elementc_password">
+    <input id="c_password" name="c_password" type="password" placeholder="Confirm Password" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,}$" class="form-control " title="Must contain 8 characters,minimum 1 alphabet 1 number and 1 special character" class="form-control " required>
+</div>
+					<div class="form-group" id="login">
+						<h5 id="loginalert">Already registered?</h5>
+						<button id="loginbutton" name="login" class="btn btn-primary">Login</button>
+						</div>
+</div>
+				<div class="col-xs-3">
+<div class="form-group" id="elementphone">
+  <input id="phonenumber" name="phonenumber" type="text" pattern="^[0-9]{10}$" placeholder="Phone Number" title="Invalid Phone Number" class="form-control " required>
+</div>
+<div class="form-group" id="elementroll">
+  <input id="rollnumber" name="rollnumber" type="text" pattern="^[0-9]{10}$" title="Invalid Roll Number" placeholder="Roll Number" class="form-control " required>
+</div>
+<div class="form-group" id="elementdep">
+    <select id="department" name="department" class="form-control" required>
+    </select>
+</div>
+<div class="form-group" id="elementbatch">
+  <input id="batch" name="batch" type="text" placeholder="Batch" class="form-control " required>
+</div>
+					<div class="form-group" id="register">
+						<h5 id="registeralert">Not yet Registered?</h5>
+					<button id="registerbutton" name="register" class="btn btn-success">Register</button>
+				</div>
+</div>
+</form>
+				</div>
+		</div>
+	</div>
+  </div>
+</div>
 			</div>
 		</div>
+		
 		<script src="jquery-2.1.3.min.js" type="text/javascript"></script>
 		<script src="script.js" type="text/javascript"></script>
+		<script src="bootstrap.min.js" type="text/javascript"></script>
 	</body>
 </html>
