--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
 </div>
 			</div>
 		</div>
-		
+		<div id="popup"></div>
+			<div id="close" hidden>
+				<span id="close"><h2>Close or esc</h2></span>
+			</div>
 		<script src="jquery-2.1.3.min.js" type="text/javascript"></script>
 		<script src="script.js" type="text/javascript"></script>
 		<script src="bootstrap.min.js" type="text/javascript"></script>
